# mem-dog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.lean.yml  docker-compose.yml  skaffold.yaml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
api/app/: analysis_templates_seed.py  auth.py  blob_store.py  capacity.py  config.py  crypto.py  gcp_auth.py  graphiti_client.py  ids.py  k8s_client.py  machines_store.py  model_activator.py  model_catalog.py  model_telemetry.py  models.py  nango_client.py  nango_provider_meta.py  processing_telemetry.py  project_context.py  provider_registry.py  provider_service.py  quotas.py  reranker.py  smart_routing.py  storage.py  store.py  telemetry.py  tracking.py  webhook_events.py
api/app/data/: gcp-cloudrun-options.json  gcp-vm-options.json  ollama-capacity-catalog.json
api/app/routers/: access.py  agent_configs.py  ai_config.py  ai_query.py  analysis_templates.py  bulk_delete.py  channel_identities.py  channels.py  data.py  embeddings.py  gdrive_push.py  gmail_push.py  graph.py  host.py  ingest.py  integrations.py  k8s_pods.py  list.py  llms.py  machines.py  memories.py  ollama_proxy.py  organizations.py  projects.py  prompts.py  skills.py  stats.py  store.py  tags.py  users.py  versions.py  viewpoints.py  webhooks_mgmt.py  zoom_push.py
api/supabase/: agent_configs.sql  api_keys.sql  integration_tables.sql  list_data_paginated.sql  mem_dog_blobs.sql  mem_dog_embeddings.sql  mem_dog_embeddings_fts.sql  mem_dog_embeddings_page.sql  mem_dog_graph.sql  migrate_default_org_project.sql  organizations.sql  profiles.sql  seed_agent_configs.sql  store_kv.sql  webhooks.sql
api/tests/: __init__.py  conftest.py  test_chat_categories.py  test_data_user_id_and_telemetry.py  test_data_webhook_flag.py  test_graphiti_client.py  test_host_api_keys.py  test_host_quotas.py  test_host_saas.py  test_host_saas_auth.py  test_host_workspace_purge.py  test_integrations.py  test_memories.py  test_normalize_storage_engine.py  test_parsed_embedding_chunks.py  test_reranker.py  test_resolve_embedding_engine.py  test_search_modes.py  test_store_embedding_page_cols.py  test_webhook_events.py
client/: README.md  pyproject.toml
client/mem_dog_client/: __init__.py  client.py  simple.py
client/mem_dog_client/adapters/: __init__.py  crewai.py  langchain.py  openai.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: client.rs  lib.rs  simple.rs  types.rs
mcp-server/: Dockerfile  pyproject.toml
mcp-server/app/: auth.py  config.py  health.py  main.py  server.py  tools.py
mcp-server/tests/: conftest.py  test_tools.py
webhook-gateway/: .env.example  Dockerfile  cli.py  pyproject.toml  pytest.ini
webhook-gateway/app/: __init__.py  attachment_downloader.py  channel_policy.py  config.py  credentials.py  envelope.py  forwarder.py  identity.py  llm.py  main.py  memory.py  middleware.py  supabase_reader.py  telemetry.py  unified_models.py  webhook_lookup.py  zoom_ws.py
webhook-gateway/app/channels/: __init__.py  appstore.py  asana.py  base.py  capterra.py  datadog.py  discord.py  email.py  g2.py  generic.py  github.py  google_business.py  grafana.py  hubspot.py  jira.py  linear.py  msteams.py  notion.py  openclaw_bridge.py  opsgenie.py  pagerduty.py  salesforce.py  sentry.py  slack.py  stripe_adapter.py  telegram.py  tripadvisor.py  trustpilot.py  twilio.py  video.py  webchat.py  whatsapp.py  yelp.py  zoom.py
webhook-gateway/app/routers/: __init__.py  api_proxy.py  channels.py  chat_ui.py  health.py  integration_proxy.py  providers.py  query.py  (+1 more)
webhook-gateway/tests/: conftest.py  test_channels.py  test_chat_channels.py  test_envelope.py  test_forwarder.py  test_identity.py  test_llm.py  test_providers.py  test_telemetry.py  test_webhooks_router.py
(+649 files in other folders)
