[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memdog-client"
version = "0.1.0"
description = "Python client for the Mem-Dog lean memory API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.28.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
crewai = [
    "crewai>=0.30.0",
]
openai = [
    "openai>=1.0.0",
]
