[project]
name = "memdog-mcp-server"
version = "0.1.0"
description = "MCP server for memdog — exposes data, search, and RAG tools over SSE"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.11.0",
    "memdog-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
