[project]
name = "webhook-gateway"
version = "0.1.0"
description = "Webhook Gateway — channel adapter and webhook forwarder for memdog"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "google-genai>=1.0,<2",
    "litellm>=1.30",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20",
    "websockets>=13,<15",
    "python-dotenv>=1,<2",
    "supabase>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4",
    "respx>=0.21",
]

[project.scripts]
wgw = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
